saves/test/demo_full_20240802_193545/fsm_serialdata/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp fsm_serialdata_tb.v fsm_serialdata.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
fsm_serialdata_tb.v:156: $finish called at 1480000 (1ps)

iverilog cmd 2 error:

